--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "my-brain-overflow",
   "private": true,
-  "version": "1.1.5",
+  "version": "1.2.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -24,6 +24,7 @@
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "pwa-asset-generator": "^6.0.8",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
